--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
 
 
         <activity android:name=".activity.FormularioActivity">
-
-
-
         </activity>
+        <activity android:name=".activity.ProvasActivity">
+        </activity>
+
     </application>
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
